[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "grunt"
version = "26.1.1"
requires-python = ">=3.9"
authors = [{ name = "R. Thomas", email = "romain.alexis.gerard.thomas@gmail.com" }]
dependencies = ["pandas",
                "matplotlib",
                "numpy",
                "july",
                'garminconnect', 
                'tqdm']

[project.urls]
repository = "https://github.com/Romain-Thomas-Shef/grunt"
#homepage = "https://romain-thomas-shef.github.io/STON/index.html"


[project.scripts]
grunt = "grunt.main:main"

[tool.hatch.build.targets.sdist]
include = ["/grunt"]
